<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_profile_details">Enter Your Profile Details :</string>
    <string name="logout">Logout</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>


    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="Users">USERS</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="imageUrl">imageUrl</string>
    <string name="ARTICLEdESCRIPTION">articleDescription</string>
    <string name="articles">ARTICLES</string>
    <string name="loggedIn">User logged in successfully</string>
    <string name="key_user">USER</string>
    <string name="Not_logged_in">User not logged in successfully</string>
    <string name="admin_email">ekta@gmail.com</string>
    <string name="admin_password">Xpress@123</string>
    <string name="role_admin">Admin</string>
    <string name="saved_successful_msg">SAVED SUCCESSFULLY</string>
    <string name="not_saved_successful_msg">data not saved</string>
    <string name="image_type">image/*</string>
    <string name="Select_pic">Select Picture</string>
    <string name="Upload">Uploading...</string>
    <string name="not_logged_in">USER NOT LOGGED IN</string>
    <string name="fetching_url">fetching Url ,Please Wait...</string>
    <string name="retry">retry</string>
    <string name="article_saved_succesfully">Article Saved Successfully</string>
    <string name="article_not__saved_succesfully">Article could not be saved</string>
    <string name="schedule">Schedule and view My Plans</string>
    <string name="view_plans">View my Progress</string>
    <string name="read_articles">Read and be fit</string>
    <string name="months">Months</string>
    <string name="enter_weight_kg">Enter Weight (kg)</string>
    <string name="save">Save</string>
    <string name="plan_card">Plan</string>
    <string name="my_program_card">My Program</string>
    <string name="articles_card">Articles</string>
    <string name="_12">12</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="save_btn">SAVE</string>
    <string name="reset">Reset</string>
    <string name="article_image_description">Article Image Description</string>
    <string name="my_plan_imageview">My Plan Imageview</string>
    <string name="action_title">ACTION TITLE</string>
    <string name="action_description">ACTION DESCRIPTION</string>
    <string name="no_data">No data available for the date</string>
    <string name="title_login">Pune Dance Fitness</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="progress_read_title">My Progress</string>
    <string name="article_read_title">Read My Articles</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="user_panel">My DashBoard</string>
    <string name="invalid_username_password">Invalid username or password</string>
    <string name="username_empty">Please enter username</string>
    <string name="password_empty">Please enter password</string>
    <string name="invalid_password">Password must contain 1 upper and lower case character,1 digit and 1 special character</string>
    <string name="invalid_username">Please enter the valid Email-Id</string>
    <string name="name_empty">Please enter name</string>
    <string name="phone_no_empty">Please enter phone number</string>
    <string name="invalid_phone_no">Please enter valid phone number</string>
    <string name="username_hint">Enter Email-Id</string>
    <string name="password_hint">Enter Password</string>
    <string name="title_activity_user_data_adapter">UserDataAdapter</string>
    <string name="loading">Loading</string>
    <string name="wait">Wait</string>
    <string name="no_record_found">No Plans Enrolled</string>
    <string name="updateWeightErrorMessage">Please login to update your weight</string>
    <string name="my_plan">My Plan</string>
    <string name="enter_weight">Enter Weight (Kg)</string>
    <string name="desc_article">Enter Article Description</string>
    <string name="create_article">Create Article</string>
    <string name="create_plan">Create Plan</string>
    <string name="user_plan_creation">Create User\'s Plan</string>
    <string name="article_detail">article detail</string>
    <string name="expand">expand calendar</string>
    <string name="user_data">user data</string>
    <string name="icon">icon</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please Wait</string>
    <string name="user_details_child">USER_DETAILS</string>
    <string name="enter_fee">Please enter your Fees</string>
    <string name="record_success">UserRecord Update Successfully</string>
    <string name="record_unsuccess">UserRecord Update UnSuccessful</string>
    <string name="weight_key">weight</string>
    <string name="user_progress_child">USERS_PROGRESS</string>
    <string name="weight_msg">Please enter your calculated weight</string>
    <string name="info_saved">Info Saved Successfully</string>
    <string name="data_key">DATABASE</string>
    <string name="unsuccess">Data could not be saved</string>
    <string name="name_key">name</string>
    <string name="uid_key">uid</string>
    <string name="select_picture">Select Picture</string>
    <string name="Upload_">Uploading...</string>
    <string name="url_fetch">fetching Url ,Please Wait...</string>
    <string name="retry_msg">Retry!!</string>
    <string name="schedule_msg">Schedule and view My Plans</string>
    <string name="enrollment_msg">View my enrollements</string>
    <string name="read_msg">Read and be fit</string>
    <string name="enter_joining_date">Enter Joining Date</string>
    <string name="enter_renew_date">Enter Renew Date</string>

    <string name="save_key">SAVE</string>
    <string name="reset_key">Reset</string>
    <string name="my_progress_wid">MY PROGRESS</string>
    <string name="date_wid">Date</string>
    <string name="weight_wid">WEIGHT</string>
    <string name="update_wid">Update</string>
    <string name="my_progress_">MY PROGRESS</string>
    <string name="date_">Date</string>
    <string name="weight_">WEIGHT</string>
    <string name="update_">Update</string>
    <string name="action_title_">ACTION TITLE</string>
    <string name="action_description_">ACTION DESCRIPTION</string>
    <string name="write_your_article_here">Write Your Article Here</string>
    <string name="enter_details">Enter All the details to Proceed</string>
    <string name="view_plan_">View Plan</string>
    <string name="plan_name_">Plan Name</string>
    <string name="joining_date_">Joining Date</string>
    <string name="renew_date_">Renew Date</string>
    <string name="fees_">Fees</string>
    <string name="renew_">Renew</string>
    <string name="plan_creation_form_">Plan Creation Form</string>
    <string name="full_name_">Full Name</string>
    <string name="enter_fees_">Enter Fees</string>
    <string name="enter_plan_name_">Enter Plan Name</string>
    <string name="save_">Save</string>
    <string name="user_name_">User Name</string>
    <string name="phone_number_">Phone Number</string>
    <string name="renew_date">Renew Date</string>
    <string name="enter_your_fee">Enter Your fee</string>
    <string name="save">Save</string>
    <string name="save">Save</string>
    <string name="plan">Plan</string>
    <string name="article">Articles</string>
    <string name="upload">Upload</string>

</resources>
