<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen16dp">

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/dimen16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnChoose"
            android:layout_width="@dimen/dimen0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/choose"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="@dimen/dimen0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/upload"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="@dimen/dimen100dp"
        android:layout_height="@dimen/dimen100dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter" />

    <EditText
        android:id="@+id/articleDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen16dp"
        android:gravity="center"
        android:hint="@string/write_your_article_here"
        android:textSize="@dimen/text_15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/SaveArticle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/save_btn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/RefreshPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/reset"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>