<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/infoCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_renew_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/renew_date"
                android:textSize="@dimen/text_15sp" />

            <EditText
                android:id="@+id/edt_plan_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_fee" />

            <Button
                android:id="@+id/saveInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange100"
                android:text="@string/save" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>