<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen10dp"
    android:background="@color/color_linear"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen2dp"
        android:background="@color/cardview_dark_background"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/dimen10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <ImageView
                android:id="@+id/user_image"
                android:layout_width="@dimen/dimen60dp"
                android:layout_height="@dimen/dimen60dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen5dp"
                android:background="@drawable/ic_person_outline_black_24dp"
                android:contentDescription="@string/user_data"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen5dp"
                android:layout_weight="1.5"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen5dp"
                    android:layout_weight="1"
                    android:text="@string/user_name_"
                    android:textSize="@dimen/text_18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1dp"
                    android:layout_margin="@dimen/dimen5dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/user_phno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen5dp"
                    android:layout_weight="1"
                    android:text="@string/phone_number_"
                    android:textSize="@dimen/text_14sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>