<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen10dp"
    android:background="#e0e0e0"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen2dp"
        android:background="@color/cardview_dark_background"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/dimen10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen60dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <ImageView
                android:id="@+id/action_image"
                android:layout_width="@dimen/dimen60dp"
                android:layout_height="@dimen/dimen60dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen5dp"
                android:background="@drawable/ic_my_plan"
                android:contentDescription="@string/my_plan_imageview"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen5dp"
                android:layout_weight="1.5"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/action_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/action_title"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="@dimen/dimen18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen2dp"
                    android:layout_margin="@dimen/dimen5dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/action_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen5dp"
                    android:layout_weight="1"
                    android:text="@string/action_description"
                    android:textSize="@dimen/dimen14sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>